--- a/dox/main.tex
+++ b/dox/main.tex
@@ -80,17 +80,35 @@ Klasa \emph{Wheel} odpowiada za rysowanie koła.
 
 Plik \emph{Wheel.h} deklaruje wszystkie zmienne oraz metode, które będą używane obiektami tej klasy.
 
+\lstinputlisting[firstline=2]{../WindowsProject1/Wheel.h}
+
 \subsubsection{Plik \emph{Wheel.cpp}}
 
+Plik \emph{Wheel.cpp} zawiera inicjalizacje zmiennych oraz metod opisanych w pliku nagłówkowym \emph{Wheel.h}.
+
+\lstinputlisting{../WindowsProject1/Wheel.cpp}
 
 \subsection{class \emph{SideSciana}}
 \subsubsection{Opis działania}
+\subsubsection{Plik nagłówkowy \emph{SideSciana.h}}
+\lstinputlisting[firstline=2]{../WindowsProject1/SideSciana.h}
+\subsubsection{Plik \emph{SideSciana.cpp}}
+\lstinputlisting{../WindowsProject1/SideSciana.cpp}
+
 
 \subsection{class \emph{Front}}
 \subsubsection{Opis działania}
+\subsubsection{Plik nagłówkowy \emph{Front.h}}
+\lstinputlisting[firstline=2]{../WindowsProject1/Front.h}
+\subsubsection{Plik \emph{Front.cpp}}
+\lstinputlisting{../WindowsProject1/Front.cpp}
 
 \subsection{class \emph{Back}}
 \subsubsection{Opis działania}
+\subsubsection{Plik nagłówkowy \emph{Back.h}}
+\lstinputlisting[firstline=2]{../WindowsProject1/Back.h}
+\subsubsection{Plik \emph{Back.cpp}}
+\lstinputlisting{../WindowsProject1/Back.cpp}
 
 \chapter{Budowa otoczenia}
 \section{Opis zadania}
